src/test/ui/span/dropck-object-cycle.stderr
error[E0597]: `*m` does not live long enough
  --> $DIR/dropck-object-cycle.rs:27:32
   |
LL |     assert_eq!(object_invoke1(&*m), (4,5));
   |                                ^^ borrowed value does not live long enough
...
LL | }
   | - `*m` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
